--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ django-on-heroku==1.1.2
 gunicorn==20.1.0
 Pillow==9.1.1
 psycopg2==2.9.3
+psycopg2-binary==2.9.3
 python-decouple==3.6
 pytz==2022.1
 sqlparse==0.4.2
